[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/player-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Pirate/Pirate.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveLeft"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveRight"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=9]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "MoveRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=12]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 384, 161 )
states/Move/node = SubResource( 12 )
states/Move/position = Vector2( 621, 161 )
transitions = [ "Idle", "Move", SubResource( 13 ), "Move", "Idle", SubResource( 14 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[node name="Pirate" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )
hframes = 12
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/MoveLeft = SubResource( 5 )
anims/MoveRight = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )
parameters/Idle/blend_position = 0.0
parameters/Move/blend_position = 0.0

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
